# texture_based_segmentation

./: .gitignore  CMakeLists.txt  README.md
docs/: index.html
docs/css/: landing-page.css
docs/img/: logo.ai
learning/: Manual_Segment_Short.csv  SVC_model.py  learning_model.py  test.py  testNumpyandSciKit.py  test_learning.py  texture_based_classifier.py
textureBasedSegmentation/: CMakeLists.txt  textureBasedSegmentation.py
textureBasedSegmentation/Testing/Python/: modelCheck.py
